# rust-adventures

./: README.md
TheAlgorithms/: README.md
blockchain_rust/: README.md
codetests/bread_buying_problem/: Cargo.toml  README.md
codetests/bread_buying_problem/src/: main.rs
codetests/factorial/: Cargo.toml
codetests/factorial/src/: main.rs
codetests/weather_sation_service/: Cargo.toml  README.md
crates/anyhow/: Cargo.toml
crates/anyhow/src/: main.rs
crates/backoff/: Cargo.toml
crates/backoff/src/: main.rs  permanent_error.rs
crates/eggmode/: Cargo.toml
crates/eggmode/src/: main.rs
crates/exponential-backoff/: Cargo.toml
crates/exponential-backoff/src/: main.rs
crates/failure/: Cargo.toml
crates/failure/src/: main.rs
crates/hyper/: Cargo.toml
crates/hyper/src/: main.rs
crates/prost/: Cargo.toml
crates/protobuf/: Cargo.toml
crates/protobuf/src/: build.rs
crates/rayon/: Cargo.toml
crates/rayon/src/: main.rs
crates/reqwest/: Cargo.toml
crates/reqwest/src/: main.rs
crates/serde/: Cargo.toml
crates/serde/src/: main.rs
crates/tokio/: Cargo.toml
crates/tokio/examples/: identd_client.rs
crates/tokio/src/: echo.rs  helloworld.rs  identd.rs  main.rs
crates/tonic/: Cargo.toml
crates/wirefilter/: Cargo.toml
crates/wirefilter/src/: main.rs
debugging/E0597/: Cargo.toml
debugging/E0597/src/: main.rs
debugging/wirefilter_issue/: Cargo.toml
debugging/wirefilter_issue/src/: main.rs
hands_on_concurrency/: README.md
playground/: Cargo.toml  README.md
playground/src/: borrowing_owning_ex.rs  file_open.rs  functional.rs  functional2.rs  hashSet.rs  main.rs  move_keyword.rs  parse_int_error.rs  restricted_aliasing.rs
rust-algorithms/: README.md
rust_by_example/: Cargo.toml  README.md
rust_by_example/src/: arrays_and_slices.rs  display1.rs  display2.rs  formatted.rs  formatting.rs  literals_and_operators.rs  main.rs  primitives.rs  testcase_list.rs  tuples.rs
rust_crash_course/: Cargo.toml  README.md
rust_crash_course/src/: arrays.rs  cli.rs  conditionals.rs  enums.rs  functions.rs  loops.rs  main.rs  point_ref.rs  println.rs  strings.rs  structs.rs  tuples.rs  types.rs  vars.rs  vectors.rs
rustcast/: README.md
rustlings/: README.md
rustwasm/: README.md
(+50 files in other folders)
