[package]
name = "anyhow"
version = "0.1.0"
authors = ["Luke Hamilton <luke@mettadata.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0.48"
