[package]
name = "backoff"
version = "0.1.0"
authors = ["Luke Hamilton <luke@mettadata.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.1.6"
reqwest = { version = "0.10", features = ["blocking", "json"] }
