[package]
name = "failure"
version = "0.1.0"
authors = ["Luke Hamilton <luke@mettadata.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
serde = "1.0.104"
toml = "0.5.6"
serde_derive = "1.0.104"