[package]
name = "reqwest_playground"
version = "0.1.0"
authors = ["Luke Hamilton <luke@mettadata.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0", features = ["json"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }