[package]
name = "wirefilter_issue"
version = "0.1.0"
authors = ["Luke Hamilton <luke@mettadata.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wirefilter-engine = "0.6.1"
failure = "0.1.6"
indexmap = "1.3.2"
fnv = "1.0.6"